# VisualScriptEngineWxWidgets

./: CMakeLists.txt  README.md  appveyor.yml  installdepswin.py
Sources/wxWidgetsAppSupport/: WXAS_ContextFactory.cpp  WXAS_ControlUtilities.cpp  WXAS_ControlUtilities.hpp  WXAS_NodeEditorControl.cpp  WXAS_NodeEditorControl.hpp  WXAS_ParameterDialog.cpp  WXAS_wxDrawingContext.cpp  WXAS_wxDrawingContext.hpp
Sources/wxWidgetsTestApp/: DrawingControl.cpp  DrawingControl.hpp  ResultImage.cpp  ResultImage.hpp  TestAppNodes.cpp  TestAppNodes.hpp  TestAppValues.cpp  TestAppValues.hpp  main.cpp
